# HR

./: Dockerfile  Makefile  README.md  hr.py  pyproject.toml
.github/workflows/: ci.yml
data/: sample_employees.csv
docs/: PRD.md
src/hr_insights/: __init__.py  cli.py  config.py  hiring.py  metrics.py  models.py  quality.py  server.py  service.py  storage.py
tests/: test_cli.py  test_config.py  test_hiring.py  test_metrics.py  test_quality.py  test_server.py  test_service.py  test_storage.py
