[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-insights"
version = "0.1.0"
description = "HR insights KPI calculator"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
hr-kpi = "hr_insights.cli:main"

hr-server = "hr_insights.server:main"
